syntax = "proto3";

option csharp_namespace = "Coupon.API.Protos";


package Coupon.API;

service CouponSearchService {
	rpc SearchCoupons(CouponFilterRequest) returns (FilteredCoupons);
}

message CouponFilterRequest {
}

message FilteredCoupons {
}